@@ -723,7 +723,19 @@ namespace MonoTests.System.Net {
 
 			listener.Close ();
 		}
-		
+
+		[Test] // bug #513849
+		public void ClosePort ()
+		{
+			var h = new HttpListener ();
+			h.Prefixes.Add ("http://127.0.0.1:8080/");
+			h.Start ();
+			h.BeginGetContext (null, null);
+			h.Stop ();
+			TcpListener t = new TcpListener (IPAddress.Parse ("127.0.0.1"), 8080);
+			t.Start ();
+			t.Stop ();
+		}
 	}
 }
 #endif
